AIOps/gitops/apps/ai-system/langgraph/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: langgraph
  namespace: ai-system

spec:
  replicas: 1

  selector:
    matchLabels:
      app: langgraph

  template:
    metadata:
      labels:
        app: langgraph

    spec:

      serviceAccountName: ai-agent

      containers:

      - name: langgraph

        image: heiffigjr/langgraph:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: 100m
            memory: 256Mi

          limits:
            cpu: "1"
            memory: 1Gi

        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
