AIOps/gitops/apps/ai-system/langgraph/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: langgraph
  namespace: ai-system

spec:
  selector:
    app: langgraph

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
